# Arcway

./: .env.example  .gitignore  README.md  build.sh  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
flatpak/: com.arcway.app.yml
src/: App.tsx  global.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  com.arcway.app.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: aur.rs  flathub.rs  mod.rs
src-tauri/src/auth/: config.rs  mod.rs  session.rs  supabase.rs
src-tauri/src/cache/: mod.rs  sqlite.rs
src-tauri/src/commands/: appimage.rs  auth.rs  config.rs  debug.rs  images.rs  install.rs  mod.rs  packages.rs  ratings.rs  supabase_comments.rs  updates.rs
src-tauri/src/config/: settings.rs
src-tauri/src/errors/: app_error.rs
src-tauri/src/models/: mod.rs  package.rs  source.rs
src-tauri/src/package_managers/: aur_helper.rs  flatpak.rs  manager.rs  mod.rs  paru.rs  yay.rs
src-tauri/src/shell/: executor.rs  mod.rs
src/api/: appimage.ts  auth.ts  config.ts  images.ts  index.ts  packages.ts  ratings.ts  supabase.ts  system.ts
src/hooks/: useAuth.ts  useInfiniteScroll.ts  useInstall.ts  useInstalled.ts  useKeyboardShortcuts.ts  useSearch.ts  useSudo.ts  useTheme.ts  useUpdates.ts
src/i18n/: index.tsx
src/pages/: AboutPage.tsx  HomePage.tsx  InstalledPage.tsx  LoginPage.tsx  PackageDetailPage.tsx  ProfilePage.tsx  RegisterPage.tsx  SearchPage.tsx  SettingsPage.tsx  UpdatesPage.tsx
supabase-migrations/: 001_comments_and_ratings.sql
(+63 files in other folders)
