[package]
name = "arcway"
version = "0.1.0"
edition = "2021"
description = "An Arch Linux app store supporting Flatpak, Yay (AUR), and Paru"
authors = ["Arcway Contributors"]
license = "MIT"

[lib]
name = "arcway_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
regex = "1"
futures = "0.3"
tokio-stream = "0.1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "multipart"] }
dotenvy = "0.15"
hostname = "0.4"
whoami = "1"
base64 = "0.22"
once_cell = "1"
chrono = "0.4"
aes-gcm = "0.10"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
